Create the template with one field and buttons to save and load.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
+	<script type="text/javascript" src="scripts.js"></script>
 </head> 
 <body> 
 
@@ -16,7 +17,15 @@
 	</div><!-- /header -->
 
 	<div data-role="content">	
-		<p>Hello world</p>		
+
+		<form>
+			<label for="text">Text:</label> <input type="text" id="text"/>
+		</form>
+		
+		<button type="button" onclick="save()">Save</button>
+		
+		<button type="button" onclick="load()">Load</button>
+		
 	</div><!-- /content -->
 
 </div><!-- /page -->
