Fix the title of the index page.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div data-role="page">
 
 	<div data-role="header">
-		<h1>My Title</h1>
+		<h1>Storage and Geolocation sample</h1>
 	</div><!-- /header -->
 
 	<div data-role="content">	
